[package]
name = "rusty-cgc"
version = "0.1.0"
edition = "2021"
authors = ["Johanna Sörngård (jsorngard@gmail.com)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashu-float = "0.3.2"
num-complex = "0.4.3"

[dev-dependencies]
approx = "0.5.1"
